# HARDWARE

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
Course-Materials/: All_About_UART.md  Beginners_Guide_To_IoT_And_Hardware_Hacking.md
Course-Materials/firmware/: all_about_uart.uf2  all_about_uart_pico.uf2
Easy/Chop-Shop/: Challenge-Scenario.md
Easy/Echoes-in-Orbit/: Challenge-Scenario.md  echoes-in-orbit-client.py
Easy/FF-Jump-Street/: Challenge-Scenario.md
Easy/Factory/: Challenge-Scenario.md
Easy/Inside-Scoop/: Challenge-Scenario.md
Easy/Intrusion/: Challenge-Scenario.md
Easy/Line/: Challenge-Scenario.md
Easy/Mini-Line/: Challenge-Scenario.md
Easy/Mission-Pinpossible/: Challenge-Scenario.md
Easy/No-Errors/: Challenge-Scenario.md  no-errors-client.py
Easy/RFlag/: Challenge-Scenario.md
Easy/Rids/: Challenge-Scenario.md
Easy/Say-Cheese/: Challenge-Scenario.md
Easy/Signals/: Challenge-Scenario.md
Easy/Sneak-Peek/: Challenge-Scenario.md
Easy/VHDLock/: Challenge-Scenario.md
Easy/Wander/: Challenge-Scenario.md
Easy/yoU-ART/: Challenge-Scenario.md
Hard/Dressrosa-Reactor/: Challenge-Scenario.md
Hard/Flash-ing-Logs/: Challenge-Scenario.md
Hard/Open-sesame/: Challenge-Scenario.md
Hard/The-Last-Frontier/: Challenge-Scenario.md
Medium/Bare-Metal/: Challenge-Scenario.md
Medium/Bounty-Head/: Challenge-Scenario.md
Medium/Breach/: Challenge-Scenario.md
Medium/Defusal/: Challenge-Scenario.md
Medium/Flow-Override/: Challenge-Scenario.md
Medium/HM74/: Challenge-Scenario.md
Medium/Knock-Knock/: Challenge-Scenario.md
Medium/Outrun/: Challenge-Scenario.md
Medium/Override/: Challenge-Scenario.md
Medium/Prison-Escape/: Challenge-Scenario.md
Medium/Project-Power/: Challenge-Scenario.md
Medium/Secret-Treasures/: Challenge-Scenario.md
Medium/Six-Five-O-Two/: Challenge-Scenario.md
Medium/Space-Heist/: Challenge-Scenario.md
Medium/State-of-Emergency/: Challenge-Scenario.md
Medium/Steel-Mountain/: Challenge-Scenario.md
Medium/Taking-Down-The-Hive/: Challenge-Scenario.md
Medium/The-PROM/: Challenge-Scenario.md
Medium/Trace/: Challenge-Scenario.md
Projects/Embedded/Blink/: .gitignore  CMakeLists.txt  POWER_OF_TEN.md  README.md  platformio.ini
Projects/Embedded/Blink/lib/blink_core/src/: blink_controller.cpp  blink_controller.hpp
Projects/Embedded/Blink/src/: main.c  main.cpp
Projects/Embedded/Blink/targets/pico-sdk/: CMakeLists.txt  main.c  main.cpp
Projects/Embedded/Blink/tests/: blink_controller_test.cpp
Projects/Embedded/ConcurrentWifiScanner/: .gitignore  CMakeLists.txt  POWER_OF_TEN.md  README.md  platformio.ini  sdkconfig.defaults
Projects/Embedded/ConcurrentWifiScanner/src/: CMakeLists.txt  main.c  main.cpp  network_catalog.c  network_catalog.cpp  network_catalog.h  network_catalog.hpp  security_assessment.c  security_assessment.cpp  security_assessment.h  security_assessment.hpp
Projects/Embedded/ConcurrentWifiScanner/tests/: CMakeLists.txt  security_assessment_test.c  security_assessment_test.cpp
Setup/: Adapters-And-Cables.md  Cleaning-And-Chemicals.md  ESD-Mats.md  Fume-Extractors.md  Helping-Hands.md  Logic-Analysers.md  Microcontrollers-And-Boards.md  Multimeters-And-Electrical-Measurement.md  README.md  Soldering.md  Spudger-Sets.md  Storage-And-Maintenance.md
Very-Easy/Baby-Frame/: Challenge-Scenario.md  baby-frame-client.py
Very-Easy/Debugging-Interface/: Challenge-Scenario.md
Very-Easy/Espresso/: Challenge-Scenario.md
Very-Easy/EtherTag/: Challenge-Scenario.md
Very-Easy/Gawk/: Challenge-Scenario.md
Very-Easy/Low-Logic/: Challenge-Scenario.md
Very-Easy/Photon-Lockdown/: Challenge-Scenario.md
Very-Easy/Secure-Digital/: Challenge-Scenario.md
Very-Easy/The-Needle/: Challenge-Scenario.md
Very-Easy/Unique/: Challenge-Scenario.md
Very-Easy/Walkie-Hackie/: Challenge-Scenario.md
Very-Easy/Watch-Tower/: Challenge-Scenario.md
apps/linux_gateway/: CMakeLists.txt  main.c  main.cpp
cmake/toolchains/: arm-none-eabi.cmake
config/: device.example.env
docs/: adding-microcontroller-platforms.md  arduino-avr-setup.md  coding-standard.md  development-environments.md  esp32-setup.md  flashing-and-deployment.md  iot-architecture.md  platformio-setup.md  raspberry-pi-pico-setup.md  review-checklist.md  stm32-setup.md
firmware/: CMakeLists.txt  device_app.c  device_app.cpp
include/power10/: bounded_statistics.h  bounded_statistics.hpp  device.h  device.hpp
include/power10/config/: device_config.h  device_config.hpp
include/power10/firmware/: device_app.h  device_app.hpp
include/power10/platform/: device_io.h  device_io.hpp
platform/host/: CMakeLists.txt
platform/host/src/: device_io.c  device_io.cpp
protocols/: telemetry.schema.json
src/: CMakeLists.txt  bounded_statistics.c  bounded_statistics.cpp  device.c  device.cpp
tests/: CMakeLists.txt  bounded_statistics_test.c  bounded_statistics_test.cpp  device_test.c  device_test.cpp  device_test.h  device_test.hpp  firmware_cycle_test.c  firmware_cycle_test.cpp
tools/: check.sh
